deploy/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-ninja
  labels:
    app.kubernetes.io/name: django-ninja-stack
